Creature move/kill/reproduce basics in place
Aphids move randomly every turn

--- a/AphidsAndLadybugs.vcxproj
+++ b/AphidsAndLadybugs.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ActionHandler.h" />
     <ClInclude Include="Aphid.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="CreatureCounter.h" />
