Generic interaction interface polished up

--- a/AphidsAndLadybugs.vcxproj
+++ b/AphidsAndLadybugs.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="Cell.h" />
     <ClInclude Include="CreatureCounter.h" />
     <ClInclude Include="Creature.h" />
+    <ClInclude Include="CreatureInteractor.h" />
     <ClInclude Include="Ladybug.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="Manager.h" />
