--- a/AphidsAndLadybugs.vcxproj
+++ b/AphidsAndLadybugs.vcxproj
@@ -67,10 +67,12 @@
     <ClInclude Include="ActionHandler.h" />
     <ClInclude Include="Aphid.h" />
     <ClInclude Include="Cell.h" />
+    <ClInclude Include="CreatureConfiguration.h" />
     <ClInclude Include="CreatureCounter.h" />
     <ClInclude Include="Creature.h" />
     <ClInclude Include="CreatureInteractor.h" />
     <ClInclude Include="Ladybug.h" />
+    <ClInclude Include="LadybugConfiguration.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Printer.h" />
@@ -83,6 +85,7 @@
     <ClCompile Include="Aphid.cpp" />
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Ladybug.cpp" />
+    <ClCompile Include="LadybugConfiguration.cpp" />
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Run.cpp" />
     <ClCompile Include="SquareCell.h" />
